[package]
name = "patrolman"
version = "0.2.0"
edition = "2021"
authors = ["Your Name"]
description = "Windows security analysis tool for networked processes with malware detection"
license = "MIT"

[dependencies]
# Process enumeration and system info
sysinfo = "0.38.4"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

# HTTP client for API calls
reqwest = { version = "0.13.3", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
futures = "0.3"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# IP address handling

# Terminal output
colored = "3.1.1"
comfy-table = "7.1"
terminal_size = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"

# Cryptographic hashing
sha2 = "0.11.0"

# Configuration file parsing
configparser = "3.1"

# Hostname

# Time handling
chrono = "0.4"

# Rate limiting and lazy initialization
lazy_static = "1.5"
rayon = "1.11.0"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
